--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/marketFooterView.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/marketFooterView.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -236,7 +236,7 @@
                 <outlet property="mTime" destination="buQ-LT-wec" id="Lsl-Gh-SZr"/>
                 <outlet property="mTotalPrice" destination="yaw-DP-KyB" id="scS-zZ-Wwj"/>
             </connections>
-            <point key="canvasLocation" x="245" y="433"/>
+            <point key="canvasLocation" x="-2" y="18"/>
         </view>
     </objects>
     <resources>
