--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/marketOrderTableViewCell.xib
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/marketOrderTableViewCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -13,7 +13,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="190"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="189.5"/>
+                <frame key="frameInset" width="320" height="189"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UEy-LL-zaE">
@@ -155,7 +155,7 @@
                 <outlet property="mStoreName" destination="uVf-sr-0m2" id="Fwm-34-5D8"/>
                 <outlet property="mSubContent" destination="ruI-wL-jTh" id="JjQ-Z9-Ju1"/>
             </connections>
-            <point key="canvasLocation" x="211" y="358.5"/>
+            <point key="canvasLocation" x="-20" y="18"/>
         </tableViewCell>
     </objects>
     <resources>
